--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 TODO:
-  how to manage this gem, so many options hoe, newgem, bones, gemhub and echoe
-  http://asciicasts.com/episodes/135-making-a-gem
   
-  add test coverage
+  add lots-o-test coverage
+  what about using httparty for rest HTTP requests?
